[package]
name = "squad-ja"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.130", features = ["derive"]}
serde_json = "1.0"
serde_derive = "1.0"
deepl-api = "0.2.1"
indicatif="0.17.0-beta.1"